# Tracker_AerialRobotics

./: LICENSE  README.md
Dataset/: README.md
Python/: tracking_CSRT.py  tracking_KCF.py
Tracker-firefly/: CMakeLists.txt  README.md  package.xml
Tracker-firefly/launch/: mav_hovering_camera_example.launch
Tracker-firefly/src/: hovering_subscriber.cpp  hovering_subscriber.hpp  hovering_subscriber_lib.cpp
Trackers/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  kcf.py  kcfTracker.cpp
Trackers/app/: csrtTracker  kcfTracker
Trackers/src/: csrtTracker.cpp
csrt_tracker/: CMakeLists.txt  README.md  package.xml
csrt_tracker/include/csrt_tracker/: ROI.hpp
csrt_tracker/include/mav_msgs/: Actuators.h  AttitudeThrust.h  FilteredSensorData.h  GpsWaypoint.h  RateThrust.h  RollPitchYawrateThrust.h  Status.h  TorqueThrust.h
csrt_tracker/launch/: main.launch  spawn_mav.launch
csrt_tracker/models/urdf/: component_snippets.xacro  firefly.xacro  firefly_base.xacro  firefly_odometry_sensor_camera.gazebo
csrt_tracker/src/: ROI_handler.cpp  ROI_handler_lib.cpp  hovering_example.cpp
src/: tracker_CSRT.cpp  tracker_KCF.cpp
videoHandling/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  output.avi  video  videoHandling.cpp
