<?xml version="1.0"?>
<package format="2">
  <name>csrt_tracker</name>
  <version>0.0.0</version>
  <description>The csrt_tracker package</description>

  <maintainer email="b_anshuman@todo.todo">b_anshuman</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_msgs</depend>
  <depend>gazebo_plugins</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>
  <depend>mav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rotors_gazebo_plugins</depend>
  <depend>sensor_msgs</depend>
  <depend>xacro</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
